# task-2-yaakovhaimoff

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Chess.h  Factory.h  Position.h  Spot.h  macros.h
include/IncPieces/: Bishop.h  Empty.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/: Board.cpp  CMakeLists.txt  Chess.cpp  Spot.cpp  main.cpp
src/SrcPieces/: Bishop.cpp  Empty.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
